--- a/Test02/Views/PhongKho/CreateCTBBKK.cshtml
+++ b/Test02/Views/PhongKho/CreateCTBBKK.cshtml
@@ -5,76 +5,92 @@
     ViewBag.bc = "active";
     ViewBag.Name = "Tạo chi tiết biên bản";
 }
-
-<h2>Tạo chi tiết biên bản kiểm kê </h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-<div class="form-horizontal">
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.MaCTBB)
-    @Html.HiddenFor(model => model.ChenhLech)
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.MaCTBB, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MaCTBB, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaCTBB, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-    @*<div class="form-group">
-        @Html.LabelFor(model => model.MaKK, "MaKK", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("MaKK", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.MaKK, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.SLTonKho, htmlAttributes: new { @class = "control-label col-md-2" })
-        <span> Số lượng tồn kho đã kiểm tra!</span>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.SLTonKho, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SLTonKho, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.SLThucTe, htmlAttributes: new { @class = "control-label col-md-2" })
-        <span>Số lượng thực tế còn lại trong kho!</span>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.SLThucTe, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SLThucTe, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    @*<div class="form-group">
-        @Html.LabelFor(model => model.ChenhLech, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ChenhLech, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ChenhLech, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.LyDo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.LyDo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.LyDo, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Lưu biên bản" class="btn btn-default" />
-        </div>
-    </div>
-</div>
+@{
+    var checkMessage = TempData["AlertMessage"];
+    if (checkMessage == "null")
+    {
+        <script>
+            swal({
+                title: "Dữ liệu trống!",
+                text: "Bạn chưa điền đủ thông tin!",
+                icon: "warning",
+                button: "OK",
+            });
+        </script>
+    }
 }
+<div class="row">
+    <div class="col-lg-3 col-md-2 col-sm-12"></div>
+    <div class="col-lg-6 col-md-8 col-sm-12">
+        <div class="tile">
 
-<div>
-    @Html.ActionLink("Trở lại", "BaoCao")
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    <h4 class="text-center tile-title">Tạo chi tiết biên bản kiểm kê</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.MaKK)
+                    @Html.HiddenFor(model => model.SLTonKho)
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.MaSP, "Tên sản phẩm", htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-md-12">
+                            @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    @*<div class="form-group">
+                            @Html.LabelFor(model => model.SLTonKho, "Số lượng tồn", htmlAttributes: new { @class = "control-label col-md-12" })
+                            <div class="col-md-12">
+                                @Html.EditorFor(model => model.SLTonKho, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.SLTonKho, "", new { @class = "text-danger" })
+                            </div>
+                        </div>*@
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.SLThucTe, "Số lượng thực tế", htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.SLThucTe, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.SLThucTe, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.LyDo, "Chi tiết", htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.LyDo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.LyDo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <!--<div class="form-group">
+                        <div class="col-md-12">
+                            <textarea rows="4" style="width:100%;" name="LyDo">-->
+                    @*@Html.EditorFor(model => model.LyDo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.LyDo, "", new { @class = "text-danger" })*@
+                    <!--</textarea>
+                        </div>
+                    </div>-->
+
+                    <div class="form-group">
+                        <span class="pull-left">
+                            <input type="submit" value="Lưu dữ liệu" class="btn btn-outline-dark" />
+                            <a href="~/PhongKho/CreateBBKK" class="btn btn-outline-warning">Trở lại</a>
+                        </span>
+                        <span class="pull-right">
+                            <a href="~/PhongKho/BaoCao" class="btn btn-outline-danger">Hủy bỏ</a>
+                        </span>
+                        <br />
+                        <br />
+
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-2 col-sm-12"></div>
 </div>
