--- a/Test02/Views/KeToan/ChinhsuaHD.cshtml
+++ b/Test02/Views/KeToan/ChinhsuaHD.cshtml
@@ -4,122 +4,123 @@
 @{
     ViewBag.Title = "ChinhsuaHD";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
     ViewBag.qlhd = "active";
-    ViewBag.nd = "Chỉnh sửa hóa đơn";
-
-
+    ViewBag.nd = "Danh sách đơn hàng đã xét duyệt";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="tile">
-            <h3 style="text-align:center">HÓA ĐƠN BÁN HÀNG</h3>
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
+<link href="~/Content/ketoan.css" rel="stylesheet" />
+<div class="tile">
+    <h3 class="tile-title">CHỈNH SỬA THÔNG TIN HÓA ĐƠN</h3>
+    <div class="tile-body">
 
-                <div class="form-horizontal">
-                    <div class="row" style="padding:20px;">
-                        @{ var mahd = db.HoaDons.Where(s => s.MaDH == Model.MaDH).FirstOrDefault();
-                        }
-                        <div class="col-sm-4">
-                            <p><strong>Mã đơn hàng:</strong> @Html.DisplayFor(model => model.MaDH)</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p><strong>Mã đại lý:</strong> @Html.DisplayFor(model => model.MaDL)</p>
-                        </div>
-                        <div class="col-sm-4">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                <strong>Tên đại lý:</strong> @{ var madh = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
-                                }
-                                @Html.DisplayFor(model => madh.TenDL)
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                <strong>Loại đại lý:</strong>
-                                @Html.DisplayFor(model => madh.MaLoaiDL)
-                            </p>
-                        </div>
-                        <div class="col-sm-4">
+        <div class="form-horizontal">
 
-                            <p><strong>Địa diểm giao:</strong>@Html.DisplayFor(model => model.DiemGiao)</p>
+            <hr />
+            @Html.HiddenFor(model => model.MaDH)
+            @Html.HiddenFor(model => model.MaDL)
+            @Html.HiddenFor(model => model.MaNVLap)
+            @Html.HiddenFor(model => model.NgayLap)
+            @Html.HiddenFor(model => model.TrangThai)
+            @Html.HiddenFor(model => model.DiemGiao)
+            @Html.HiddenFor(model => model.TongTien)
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <h3> THÔNG TIN HÓA ĐƠN</h3>
 
-                        </div>
-                        <div class="col-sm-4">
 
-                            <p><strong>Trạng thái đơn hàng:</strong>@Html.DisplayFor(model => model.TrangThai)</p>
+            <div class="title-hd">
+                <P><strong>Mã đơn hàng:</strong>@Html.DisplayFor(modelItem => Model.MaDH)</P>
+                <p>
+                    <strong>Ngày lập:</strong> @{ var ngay = String.Format("{0:d/M/yyyy}", Model.NgayLap); ;}
+                    @Html.DisplayFor(modelItem => ngay)
+                </p>
+            </div>
+            <table>
+                <tr>
+                    <th>THÔNG TIN</th>
+                    <th>ĐỊA CHỈ GIAO</th>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Tên đại lý:</strong>
+                        @{
+                            var dl = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
+                            var nv = db.NhanViens.Where(n => n.MaNV == Model.MaNVLap).FirstOrDefault();
 
-                        </div>
 
-                        <div class="col-sm-4">
-                            <p>
-                                <strong>Tổng đơn hàng:</strong> @{ var ThanhTien = string.Format("{0:0,0 vnđ}", Model.TongTien);}
-                                @Html.DisplayFor(modelItem => ThanhTien)
-                            </p>
+                        }@Html.DisplayFor(modelItem => dl.TenDL)
+                    </td>
+                    <td rowspan="4">
+                        @Html.DisplayFor(modelItem => Model.DiemGiao)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Điện thoại: </strong> @Html.DisplayFor(modelItem => dl.SDT)
+                    </td>
 
-                        </div>
-                        <div class="col-sm-4">
-                        </div>
-                        <div class="col-sm-4">
-                            <p>
-                                <strong>Tình trạng thanh toán:</strong>
-                                <div class="form-group">
-                                    <div class="col-md-10">
-                                        <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
-                                            <option selected="@Model.TinhTrangThanhToan">@Model.TinhTrangThanhToan</option>
-                                            <option>Chưa thanh toán</option>
-                                            <option>Đã thanh toán</option>
-                                            <option>Đang nợ</option>
-                                        </select>
-                                    </div>
-                                    @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Nhân viên phụ trách</strong>: @Html.DisplayFor(modelItem => Model.MaNVLap) -  @Html.DisplayFor(modelItem => nv.TenNV)
+                    </td>
 
-                                </div>
-                            </p>
 
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.NgayLap, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayXuat must be a date." id="NgaySX" name="NgaySX" type="datetime-local" value="">
-                                    @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
+                </tr>
+                <tr>
+                    <td>
+                        <strong>Tổng hóa đơn :</strong>    @Html.DisplayFor(modelItem => Model.TongTien)
+                    </td>
 
-                        </div>
-                    </div>
 
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.MaDH)
-                    @Html.HiddenFor(model => model.MaDL)
-                    @Html.HiddenFor(model => model.MaNVLap)
+                </tr>
+            </table>
 
-                    @Html.HiddenFor(model => model.TrangThai)
-                    @Html.HiddenFor(model => model.DiemGiao)
-                    @Html.HiddenFor(model => model.TongTien)
 
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Chỉnh sửa" class="btn btn-info" />
-                        </div>
+
+            <div class="row" style="padding-top:10px;">
+
+                <div class="form-group col-sm-6">
+                    <strong>Tình trạng thanh toán</strong>
+                    <div class="col-md-10">
+                        <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
+                            <option selected="@Model.TinhTrangThanhToan">@Model.TinhTrangThanhToan</option>
+                            <option>Đã thanh toán</option>
+                            <option>Chưa thanh toán</option>
+                            <option>Đang nợ</option>
+                        </select>
+                        @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-            }
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Lưu thay đổi" class="btn btn-success btn-sm" />
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
 
 
         </div>
-        <div>
-            @Html.ActionLink("Quay lại danh sách hóa đơn", "QLDonHang")
-        </div>
+        }
+
     </div>
 </div>
-
-
-
+        <div>
+            @Html.ActionLink("Quay lại danh sách", "QLDonHang")
+        </div>
