--- a/Test02/Views/KeToan/QLDonThanhToan.cshtml
+++ b/Test02/Views/KeToan/QLDonThanhToan.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Test02.Models.DonHang>
 @using Test02.Models;
 @{
-    ViewBag.Title = "QLDonHang";
+    ViewBag.Title = "Đơn hàng thanh toán";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.qlhd = "active";
     ViewBag.nd = "Danh sách đơn hàng đã xét duyệt";
@@ -17,7 +17,7 @@
 
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link" href="~/ketoan/QLDonHang" >Đơn chưa thanh toán</a>
+                        <a class="nav-link" href="~/ketoan/QLDonHang">Đơn chưa thanh toán</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="~/ketoan/QLDonNo">Đơn nợ</a>
@@ -26,6 +26,32 @@
                         <a class="nav-link active" aria-current="page" href="#">Đơn đã thanh toán</a>
                     </li>
                 </ul>
+
+                <div class="row" style="padding-top:10px;">
+                    <div class="col-sm-2">
+                        <a class="btn btn-secondary btn-sm print-file" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
+                    </div>
+                    <div class="col-sm-2">
+                        <a class="btn btn-secondary btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="~/KeToan/QLDonThanhToan">
+                            <i class="fas fa-copy"></i> Làm mới danh sách
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        @using (Html.BeginForm("QLDonThanhToan", "KeToan", FormMethod.Post, new { @class = "form-group-sm" }))
+                        {
+
+                            @Html.DropDownList("thangs", (IEnumerable<SelectListItem>)TempData["thangs"], htmlAttributes: new { @class = "form-control-sm" })
+                            @*<input type="submit" value="Search" class="btn btn-danger btn-sm"/>*@
+                            @*<input type="Text" class="form-control mx-sm-3" value="@ViewBag.Keyword" name="searchString" placeholder="Nhập tên đại lý cần tìm">*@
+                            <input type="submit" class="btn btn-danger btn-sm" value="Tìm theo tháng">
+
+
+                        }
+                    </div>
+
+                </div>
 
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row" style="padding-top:10px">
@@ -89,8 +115,8 @@
                                                         <i class="fa fa-edit"></i>
                                                     </a>
                                                     @*<a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
-            <i class="fas fa-trash-alt"></i>
-        </a>*@
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>*@
                                                     <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Xuất đơn hàng">
                                                         <i class="fas fa-train"></i>
                                                     </a>
